--- a/package.json
+++ b/package.json
@@ -6,9 +6,19 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "clsx": "^1.1.1",
+    "foundation-sites": "^6.7.4",
+    "jquery": "^3.6.0",
+    "mouse-wheel-zoom": "^1.1.5",
     "react": "^18.1.0",
+    "react-cookie": "^4.1.1",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.1.0",
+    "react-draggable": "^4.4.5",
+    "react-icons": "^4.3.1",
+    "react-resizable": "^3.0.4",
     "react-scripts": "5.0.1",
+    "tone": "^14.7.77",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
