--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.3.1",
     "react-resizable": "^3.0.4",
     "react-scripts": "5.0.1",
+    "tippy.js": "^6.3.7",
     "tone": "^14.7.77",
     "web-vitals": "^2.1.4"
   },
